# Rag-Equity-Research-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.api  Dockerfile.bot  LICENSE  README.md  claude.md  docker-compose.yml  pyproject.toml  run_telegram_bot.py
.github/: AZURE_SETUP.md  dependabot.yml
.github/workflows/: ci.yml  deploy.yml
docs/: README.md  azure-deployment.md  ci-cd-setup.md  docker-setup.md  embeddings-rag.md  fastapi-backend.md  features.md  financial-data-tools.md  langgraph-orchestration.md  qdrant-vector-database.md  redis-caching.md  telegram-bot.md
infra/: deploy.sh  main.bicep
scripts/: deploy.sh
src/: __init__.py
src/agents/: __init__.py  document_reader.py  earnings_agent.py  graph.py  market_data.py  news_sentiment.py  peer_agent.py  reddit_agent.py  risk_agent.py  synthesizer.py
src/api/: main.py  metrics.py
src/api/middleware/: auth.py
src/config/: settings.py
src/rag/: __init__.py  chunking.py  embeddings.py  hybrid_search.py  reranker.py  vector_store.py
src/services/: __init__.py  chat.py  dcf_valuation.py  earnings_calendar.py  historical_analysis.py  peer_comparison.py  risk_scoring.py  watchlist.py
src/telegram/: __init__.py  bot.py  client.py  formatters.py  handlers.py  handlers_v2.py  i18n.py  keyboards.py  storage.py
src/tools/: __init__.py  earnings_call_tool.py  reddit_sentiment_tool.py  search_tool.py  sec_edgar_tool.py  yfinance_tool.py
src/utils/: __init__.py  cache.py  rate_limiter.py
terraform/: .gitignore  README.md  backend.tf  container_apps.tf  container_registry.tf  key_vault.tf  openai.tf  outputs.tf  qdrant.tf  resource_group.tf  terraform.tfvars.example  tfplan  variables.tf  versions.tf
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_config.py  test_rag.py  test_services.py  test_telegram.py  test_tools.py  test_utils.py
